# TodoAI-fastapi

./: README.md  pyproject.toml
src/todoai_fastapi/: main.py
