[project]
name = "TodoAI-fastapi"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Girish Gopaul", email = "girish@gopaul.me"},
]
dependencies = [
    "openai>=1.26.0",
    "fastapi>=0.111.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "private"}


[tool.pdm]
distribution = false
